[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/art/square.png" type="Texture" id=1]
[ext_resource path="res://scripts/square_click.gd" type="Script" id=2]
[ext_resource path="res://scripts/source.gd" type="Script" id=3]
[ext_resource path="res://scripts/packetpath.gd" type="Script" id=4]
[ext_resource path="res://scripts/pathgroup.gd" type="Script" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 25, 25 )

[sub_resource type="Curve2D" id=2]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, -24 )
}

[node name="SourceBox" type="Node2D"]
visible = false
script = ExtResource( 3 )

[node name="Area2D" type="Area2D" parent="."]
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="box_sprite" type="Sprite" parent="Area2D"]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[node name="Paths" type="Node2D" parent="."]
script = ExtResource( 5 )

[node name="Path2D" type="Path2D" parent="Paths"]
curve = SubResource( 2 )
script = ExtResource( 4 )
side1 = 2

[node name="Label" type="Label" parent="."]
margin_left = -16.0
margin_top = 8.0
margin_right = 16.0
margin_bottom = 22.0
text = "999"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SpawnTimer" type="Timer" parent="."]
[connection signal="input_event" from="Area2D" to="Area2D" method="_on_Area2D_input_event"]
[connection signal="rotate_left" from="Area2D" to="." method="_on_Area2D_rotate_left"]
[connection signal="rotate_right" from="Area2D" to="." method="_on_Area2D_rotate_right"]
[connection signal="timeout" from="SpawnTimer" to="." method="_on_SpawnTimer_timeout"]
